syntax = "proto3";

package applications.grpc.eva.v1;

message User {
  string id = 1;
  string username = 2;
  repeated string roles = 3;
  bool verified = 4;
  string avatar = 5;
}

message GetUserRequest {
  string id = 1;
}

message SessionRequest {
  string token = 1;
}

message Session {
  User user = 1;
  string token = 2;
  string expiration = 3;
}

service Eva {
  rpc ValidateSession(SessionRequest) returns (Session);
  rpc GetUser(GetUserRequest) returns (User);
}